ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
======================================================================

* V1.21.18
- *SHOW implemented (JGHarston)
- Bug fix for DEL in text-only builds (JGHarston)
* V1.21.17
- Fix memory leak in MODE change
- Fix Filled Rectangles and CLG with GCOL actions, previously implemented
  and rather promptly broken.
- Fixed Flash on Mode 7 on 64-bit machines.
- Fixed Escape on 32-bit machines.
- Improved INKEY(negative) handling and other keyboard bugs, thank you
  JGHarston.
- Fix reading strings from DATA with included quote marks.
- Fix LSL (<<), ASR (>>) and LSR (>>>) to replicate RISC OS behaviour.
- VDU19 palette changes now update the screen immediately. Also, now has
  no effect in MODE 7.
- Mouse display behaviour changed - if fullscreen mode enabled, mouse is off
  upon mode change or startup; if windowed, mouse is on.
- Telstar client now includes NXtel, and a new, more robust, mechanism of
  calculating high-bit escaped characters, as NXtel did it differently to
  Telstar or CCl4.
* V1.21.16
- Added auto-sensing support for the Raspberry Pi's GPIO interface, with
  memory-mapped I/O and SYS calls. While the calls are recognised on all
  builds, it's only active on the Raspberry Pi.
- Bug fix (regression): LIST in text builds would error after one line.
- Adjust graphsdl.c:buff_convex_poly bounds checking to allow off-screen
  drawing (we limit this elsewhere). For example, triangles drawn offscreen.
  will now appear to be chopped off, rather than squashed into the screen.
- Bug fix for out-of-bounds array scribbling when off screen.
- Code refactor - SYS calls are now (with a few exceptions) in their own file.
- Performance improvements to Mode 7, and fix rendering bug when ESCAPE was
  disabled.
- Telstar client now includes Authentic mode, where a delay is added to each
  character rendering to simulate (approximately) a 1200baud modem.