@@ -4,6 +4,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 * V1.21.18
 - *SHOW implemented (JGHarston)
 - Bug fix for DEL in text-only builds (JGHarston)
+- Limit *WinTitle to SDL and UNIX builds - it's a no-op otherwise.
 * V1.21.17
 - Fix memory leak in MODE change
 - Fix Filled Rectangles and CLG with GCOL actions, previously implemented
